<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_near_me_black_24dp"
            android:title="@string/festival" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_mic_black_24dp"
            android:title="@string/artistes" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_ticket_black_24dp"
            android:title="@string/ticket" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_live_help_black_24dp"
            android:title="@string/a_propors" />
    </group>

            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_people_black_24dp"
                android:title="@string/benevoles" />

           <item
               android:id="@+id/nav_map"
               android:icon="@drawable/ic_map_black_24dp"
               android:title="@string/map"/>



</menu>
