<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.ArtistesActivity.AbActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ab"
                android:scaleType="centerCrop"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profil"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/orange_un_mute"
                android:textSize="50dp"
                android:layout_marginBottom="10dp"
                android:textAlignment="center"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_gravity="left"
                        android:layout_marginBottom="2dp">
                        <Button
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:background="@drawable/rounded_button"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Rock"
                            android:layout_marginLeft="3dp"
                            android:textSize="16dp"
                            android:textColor="@color/primary_un_mute"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_gravity="center">
                        <Button
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:background="@drawable/rounded_button"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Alternatif"
                            android:textSize="16dp"
                            android:layout_marginLeft="3dp"
                            android:textColor="@color/primary_un_mute"/>
                    </LinearLayout>
                </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ab_1"
                android:textColor="@color/primary_un_mute"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:textSize="20dp"
                android:textAlignment="center"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ab_2"
                android:textColor="@color/primary_un_mute"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:textSize="20dp"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ab_3"
                android:textColor="@color/primary_un_mute"
                android:layout_gravity="center_horizontal"
                android:id="@+id/description_ab"
                android:textSize="20dp"/>

                </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:background="@color/white"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <Button
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:background="@drawable/ic_twitter"
                        android:layout_centerInParent='true'
                        android:onClick="goToAbTwitter"/>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <Button
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:background="@drawable/ic_facebook"
                        android:layout_centerInParent='true'
                        android:onClick="goToAbFb"/>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <Button
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:background="@drawable/ic_instagram"
                        android:layout_centerInParent='true'
                        android:onClick="goToAbInsta"/>

                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <Button
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:background="@drawable/ic_soundcloud"
                        android:layout_centerInParent='true'
                        android:onClick="goToAbsoundcloud"/>

                </RelativeLayout>

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>